# img-parts

./: Cargo.toml  rust-toolchain
src/: common.rs  lib.rs  riff.rs  traits.rs
src/jpeg/: image.rs  segment.rs
src/png/: chunk.rs  image.rs  mod.rs
src/webp/: flags.rs  mod.rs
tests/: exif_jpeg.rs  exif_webp.rs  extract_jpeg.rs  extract_webp.rs  inject_jpeg.rs  inject_webp.rs
